// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TerminalRenderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

  Layer 0: ○ Preflight
  Layer 1:
    ○ Publish:A
    ○ Publish:B
  Layer 2: ○ CreateTag

0/4 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

  Layer 0: ● Preflight
  Layer 1:
    ○ Publish:A
    ○ Publish:B
  Layer 2: ○ CreateTag

0/4 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

  Layer 0: ✓ Preflight
  Layer 1:
    ● Publish:A
    ● Publish:B
  Layer 2: ○ CreateTag

1/4 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 4`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

  Layer 0: ✓ Preflight
  Layer 1:
    ✓ Publish:A
    ✓ Publish:B
  Layer 2: ✓ CreateTag

4/4 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 5`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

  Layer 0: ✓ Preflight
  Layer 1:
    ✓ Publish:A
    ✗ Publish:B
  Layer 2: ○ CreateTag

2/4 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 6`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
[1m[36mWorkflow Progress[0m

  [2mLayer 0:[0m [32m✓ Preflight[0m
  [2mLayer 1:[0m
    [33m● Publish:A[0m
    [90m○ Publish:B[0m
  [2mLayer 2:[0m [90m○ CreateTag[0m

[2m1/4 completed (0.0s)[0m
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > DAG mode > full > renderDagFull({ layers: [ [ 'StepA' ], [ 'StepB', 'StepC' ], [ 'StepD' ] ], edges: [ [ 'StepA'...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────┐    ┌──────────┐    ┌──────────┐
│○  StepA   │──→ │○  StepB   │──→ │○  StepD   │
└──────────┘    └──────────┘    └──────────┘
      │               │                     
                ┌──────────┐                
                │○  StepC   │──→             
                └──────────┘                

0/4 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > DAG mode > full > renderDagFull({ layers: [ [ 'StepA' ], [ 'StepB', 'StepC' ], [ 'StepD' ] ], edges: [ [ 'StepA'...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌──────────┐    ┌──────────┐    ┌──────────┐
│✓  StepA   │──→ │●  StepB   │──→ │○  StepD   │
└──────────┘    └──────────┘    └──────────┘
      │               │                     
                ┌──────────┐                
                │●  StepC   │──→             
                └──────────┘                

1/4 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > DAG mode > full > renderDagFull({ layers: [ [ 'StepA' ], [ 'StepB', 'StepC' ], [ 'StepD' ] ], edges: [ [ 'StepA'...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
[32m┌──────────┐[0m    [33m┌──────────┐[0m    [90m┌──────────┐[0m
[32m│[0m✓  StepA   [32m│[0m──→ [33m│[0m●  StepB   [33m│[0m──→ [90m│[0m○  StepD   [90m│[0m
[32m└──────────┘[0m    [33m└──────────┘[0m    [90m└──────────┘[0m
      │               │                     
                [90m┌──────────┐[0m                
                [90m│[0m○  StepC   [90m│[0m──→             
                [90m└──────────┘[0m                

[2m1/4 completed (0.0s)[0m
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > complex DAG > full > renderDagFull({ layers: [ [ 'Preflight' ], [ 'Publish:@kitz/core', 'Publish:@kitz/flo', 'Publi...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
┌────────────────────┐    ┌────────────────────┐    ┌────────────────────┐    ┌────────────────────┐
│○     Preflight      │    │○ Publish:@kitz/core │    │○     CreateTag      │    │○      PushTags      │
└────────────────────┘    └────────────────────┘    └────────────────────┘    └────────────────────┘
                                     │                                                              
                          ┌────────────────────┐                                                    
                          │○ Publish:@kitz/flo  │                                                    
                          └────────────────────┘                                                    
                                     │                                                              
                          ┌────────────────────┐                                                    
                          │○ Publish:@kitz/syn  │                                                    
                          └────────────────────┘                                                    

0/6 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > complex DAG > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:@kitz/core', 'Publish:@kitz/flo', 'Publi...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

  Layer 0: ○ Preflight
  Layer 1:
    ○ Publish:@kitz/core
    ○ Publish:@kitz/flo
    ○ Publish:@kitz/syn
  Layer 2: ○ CreateTag
  Layer 3: ○ PushTags

0/6 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > complex DAG > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:@kitz/core', 'Publish:@kitz/flo', 'Publi...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

  Layer 0: ✓ Preflight
  Layer 1:
    ✓ Publish:@kitz/core
    ● Publish:@kitz/flo
    ● Publish:@kitz/syn
  Layer 2: ○ CreateTag
  Layer 3: ○ PushTags

2/6 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
○ Preflight
○ Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

0/5 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
● Preflight
○ Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

0/5 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
✓ Preflight
● Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

1/5 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 4`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
✓ Preflight
✓ Publish:core
✓ Publish:flo
✓ CreateTag
✓ PushTags

5/5 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 5`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
✓ Preflight
✗ Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

1/5 completed (0.0s)
╚══════════════════════════════════════════════════╝"
`;

exports[`TerminalRenderer > list mode > renderList({ activities: [ 'Step1', 'Step2', 'Step3' ], colors: true, events: [ ActivitySta...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
[32m✓[0m Step1
[33m●[0m Step2
[90m○[0m Step3

[2m1/3 completed (0.0s)[0m
╚══════════════════════════════════════════════════╝"
`;
